--- a/package.json
+++ b/package.json
@@ -28,6 +28,22 @@
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
-    "@bookshop/generate": "3.9.0"
+    "@bookshop/generate": "3.9.0",
+    "dotenv": "^16.4.5",
+    "js-yaml": "^4.1.0",
+    "markdown-it": "^14.1.0",
+    "rehype-format": "^5.0.1",
+    "rehype-parse": "^9.0.1",
+    "rehype-remark": "^10.0.1",
+    "rehype-stringify": "^10.0.1",
+    "remark-stringify": "^11.0.0",
+    "rosey": "^2.3.3",
+    "sass": "^1.80.5",
+    "sharp": "^0.33.5",
+    "slugify": "^1.6.6",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
+    "yaml": "^2.4.2",
+    "smartling-api-sdk-nodejs": "^2.11.0"
   }
 }
