Updated 1 file via CloudCannon.

--- a/rosey/rcc.yaml
+++ b/rosey/rcc.yaml
@@ -1,70 +1,34 @@
-# A list of locales you need files generated for. 
-# Adding to this will generate the yaml and JSON files needed for each locale. 
-# Locales can be anything you want, are case-sensitive, 
-# and will be used for the URL prefix for your translated section of the site. 
-# Some common examples would be `fr`, `fr-FR` or `french`.
-locales: 
+locales:
   - nl
-
 input_lengths:
-    # Define the behaviour for when an input in the editor facing files will concatenate it's label, 
-    # and create a context box to see the whole translation.
-    # https://cloudcannon.com/documentation/articles/inputs-reference/#_inputs.*.context
   label: 42
-  # Define when an input is a simple text input, and when it should grow to be a textarea input.
   textarea: 20
-
-# Shows a comment under each input that links to where the phrase is used on the page.
 see_on_page_comment:
-  # Define whether these 'context' comments should be enabled at all.
   enabled: true
-  # Your staging site url used to generate the comments that link to the phrase seen in context on the page.
-  base_url: https://adjective-noun.cloudvent.net/
-  # The text used for the link.
+  base_url: https://exotic-bison.cloudvent.net/
   comment_text: See in context
-
-# Shows a comment under each input that links to the GitHub history for the page.
 github_history:
-  # Define whether these 'Git history' comments should be enabled at all.
   enabled: true
-  # Your site's GitHub url, used to generate the comments that link to the page's GitHub history.
-  repo_url: https://github.com/org/repo
-   # Your staging site's branch name, if different from the classic 'staging'.
+  repo_url: https://github.com/tomrcc/vonge-rcc-test
   branch_name: staging
-   # The text used for the link.
   comment_text: Git history
-
-# Use a Rosey namespace to mark certain phrases to be grouped together and omitted from the yaml translation files for the page they appear on
 namespace_pages:
   - common
-
-# Tells the RCC if you're storing the files Rosey expects in a different location to the default. 
-# You'll also need to update the CLI commands for Rosey in your staging & production site's postbuild.
 rosey_paths:
   rosey_base_file_path: ./rosey/base.json
   rosey_base_urls_file_path: ./rosey/base.urls.json
   translations_dir_path: ./rosey/translations
   locales_dir_path: ./rosey/locales
-
-# Smartling integration configuration for automatic AI-powered machine translations.
-# https://help.smartling.com/hc/en-us/articles/4405992477979-Node-js-SDK
 smartling:
-  # Enable/Disbale the integration.
   smartling_enabled: false
-  # The public facing credentials Smartling gives you.
-  dev_project_id: 
-  dev_user_identifier: 
-  # How long to wait between pings to check whether Smartling has finished translating your content.
+  dev_project_id:
+  dev_user_identifier:
   ping_interval: 20000
-  # How many pings to wait before exiting the process because you're waiting for authorization (usually due to no new content).
   ping_maximum: 6
   pings_to_wait_for_auth: 3
-  # The paths to save outgoing and incoming Smartling data.
   incoming_translations_dir: ./rosey/smartling-translations/
   outgoing_translations_file_path: ./rosey/outgoing-smartling-translations.json
-  # The unique identifier for this Smartling job.
   outgoing_translation_file_uri: /rosey/translations/
-
 _inputs:
   namespace_pages:
     type: array
