Add preview config for rcc.yaml

--- a/rosey/rcc.yaml
+++ b/rosey/rcc.yaml
@@ -30,6 +30,29 @@ smartling:
   outgoing_translations_file_path: ./rosey/outgoing-smartling-translations.json
   outgoing_translation_file_uri: /rosey/translations/
 _inputs:
+  locales:
+    type: array
+    comment: >-
+      Add and remove the locales you need for your site. Locales can be any
+      format, usually either a two letter code (es), or a hyphenated four letter
+      code (es-ES).
+  input_lengths:
+    type: object
+    options:
+      preview:
+        icon: format_quote
+        text: Label and Textarea controls
+        subtext: 
+          - template: "Label: {label}, Textarea: {textarea}"
+  see_on_page_comment:
+    type: object
+    options:
+      preview:
+        icon: read_more
+        text:
+          - template: "{'Enabled'|if=enabled|default='Disabled'}"
+        subtext:
+          - templated: "{comment_text|if=enabled}"
   namespace_pages:
     type: array
     comment: >-
@@ -38,12 +61,6 @@ _inputs:
       namespaces, and grouped on the namespace page. See the [Rosey
       docs](https://rosey.app/docs/namespacing/) for details on adding
       namespaces to your html.
-  locales:
-    type: array
-    comment: >-
-      Add and remove the locales you need for your site. Locales can be any
-      format, usually either a two letter code (es), or a hyphenated four letter
-      code (es-ES).
   base_url:
     comment: >-
       The url to the CloudCannon staging site that you enter your translation
