--- a/rosey/rcc.yaml
+++ b/rosey/rcc.yaml
@@ -30,12 +30,6 @@ smartling:
   outgoing_translations_file_path: ./rosey/outgoing-smartling-translations.json
   outgoing_translation_file_uri: /rosey/translations/
 _inputs:
-  $:
-    type: object
-    label: RCC Config
-    options:
-      preview:
-        icon: settings
   locales:
     type: array
     comment: >-
@@ -49,7 +43,7 @@ _inputs:
         icon: format_quote
         text: Label and Textarea controls
         subtext: 
-          - template: "Label: {label}, Textarea: {textarea}"
+          - template: "Label: {label}\n Textarea: {textarea}"
   see_on_page_comment:
     type: object
     options:
